# diretto

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: database.py  main.py  models.py  requirements.txt  search.py
api/routers/: companies.py  health.py  jobs.py
crawler/: Dockerfile  filters.py  main.py  pyproject.toml
crawler/crawler/: discoverer.py  fetcher.py  filters.py  main.py  parser.py  storage.py
crawler/crawler/adapters/: teamtailor.py
data/migrations/: 001_initial.sql
data/seeds/: blocklist.yaml  companies.yaml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  storage.ts
frontend/src/styles/: globals.css
